changed archetype params

--- a/content/posts/2023-07-01-some-post.md
+++ b/content/posts/2023-07-01-some-post.md
@@ -18,7 +18,7 @@ disableHLJS: false # to disable highlightjs
 disableShare: false
 disableHLJS: false
 hideSummary: false
-searchHidden: true
+searchHidden: false
 ShowReadingTime: true
 ShowBreadCrumbs: true
 ShowPostNavLinks: true
