changed label in config and posts archetype

--- a/content/posts/2023-07-01-some-post.md
+++ b/content/posts/2023-07-01-some-post.md
@@ -9,7 +9,7 @@ author: "me"
 # author: ["Me", "You"] # multiple authors
 showToc: true
 TocOpen: false
-draft: false
+draft: true
 hidemeta: false
 comments: false
 description: "Desc Text."
